Added singleton class.